@@ -24,8 +24,8 @@
  * @copyright  2012-2018 Kyle Goslin, Daniel McSweeney
  * @license    http://www.gnu.org/copyleft/gpl.html GNU GPL v3 or later
  */
+$plugin->version   = 2018071901;      // The current module version (Date: YYYYMMDDXX)
 
-$plugin->version   = 2018071900;      // The current module version (Date: YYYYMMDDXX)
 $plugin->requires  = 2018051700.00;      // Requires this Moodle version
 $plugin->component = 'block_cmanager';
 $plugin->maturity = MATURITY_STABLE;
